--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
 
         <div class="content">
-            <h2>Hello World</h2>
-            <p>
+            <h2 class="title">Hello World</h2>
+            <p class="description">
                 The company itself is a very successful company. I followed should the pain be repelled? Having freed him from such conveniences as the pleasures of manners, let it be as if we were leading that by rejecting it, you should see the pleasure of life! Present?
             </p>
         </div>
