--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="language-wrapper">
-            <a href="#" lang="english">EN</a>
+            <a href="#" lang="english" class="active">EN</a>
             <a href="#" lang="Latin">LTN</a>
             <a href="#" lang="Amharic">AM</a>
         </div>
